src/monit/monit-5.0.3/y.output
   0  $accept : cfgfile $end

   1  cfgfile :
   2          | statement_list

   3  statement_list : statement
   4                 | statement_list statement

   5  statement : setalert
   6            | setdaemon
   7            | setlog
   8            | seteventqueue
   9            | setmmonits
  10            | setmailservers
  11            | setmailformat
  12            | sethttpd
  13            | setpid
  14            | setidfile
  15            | setstatefile
  16            | setexpectbuffer
  17            | setinit
  18            | checkproc optproclist
  19            | checkfile optfilelist
  20            | checkfilesys optfilesyslist
  21            | checkdir optdirlist
  22            | checkhost opthostlist
  23            | checksystem optsystemlist
  24            | checkfifo optfifolist
  25            | checkstatus optstatuslist

  26  optproclist :
  27              | optproclist optproc

  28  optproc : start
  29          | stop
  30          | pid
  31          | ppid
  32          | connection
  33          | connectionunix
  34          | timeout
  35          | alert
  36          | every
  37          | mode
  38          | group
  39          | depend
  40          | resourceprocess

  41  optfilelist :
  42              | optfilelist optfile

  43  optfile : start
  44          | stop
  45          | timestamp
  46          | timeout
  47          | every
  48          | alert
  49          | permission
  50          | uid
  51          | gid
  52          | checksum
  53          | size
  54          | match
  55          | mode
  56          | group
  57          | depend

  58  optfilesyslist :
  59                 | optfilesyslist optfilesys

  60  optfilesys : start
  61             | stop
  62             | timeout
  63             | every
  64             | alert
  65             | permission
  66             | uid
  67             | gid
  68             | mode
  69             | group
  70             | depend
  71             | inode
  72             | space
  73             | fsflag

  74  optdirlist :
  75             | optdirlist optdir

  76  optdir : start
  77         | stop
  78         | timestamp
  79         | timeout
  80         | every
  81         | alert
  82         | permission
  83         | uid
  84         | gid
  85         | mode
  86         | group
  87         | depend

  88  opthostlist : opthost
  89              | opthostlist opthost

  90  opthost : start
  91          | stop
  92          | connection
  93          | icmp
  94          | timeout
  95          | alert
  96          | every
  97          | mode
  98          | group
  99          | depend

 100  optsystemlist :
 101                | optsystemlist optsystem

 102  optsystem : timeout
 103            | alert
 104            | every
 105            | group
 106            | depend
 107            | resourcesystem

 108  optfifolist :
 109              | optfifolist optfifo

 110  optfifo : start
 111          | stop
 112          | timestamp
 113          | timeout
 114          | every
 115          | alert
 116          | permission
 117          | uid
 118          | gid
 119          | mode
 120          | group
 121          | depend

 122  optstatuslist :
 123                | optstatuslist optstatus

 124  optstatus : timeout
 125            | alert
 126            | every
 127            | group
 128            | depend

 129  setalert : SET alertmail '{' eventoptionlist '}' formatlist reminder
 130           | SET alertmail formatlist reminder
 131           | SET alertmail NOT '{' eventoptionlist '}' formatlist reminder

 132  setdaemon : SET DAEMON NUMBER startdelay

 133  startdelay :
 134             | START DELAY NUMBER

 135  setexpectbuffer : SET EXPECTBUFFER NUMBER unit

 136  setinit : SET INIT

 137  setlog : SET LOGFILE PATH
 138         | SET LOGFILE SYSLOG
 139         | SET LOGFILE SYSLOG FACILITY STRING

 140  seteventqueue : SET EVENTQUEUE BASEDIR PATH
 141                | SET EVENTQUEUE BASEDIR PATH SLOT NUMBER
 142                | SET EVENTQUEUE SLOT NUMBER

 143  setidfile : SET IDFILE PATH

 144  setstatefile : SET STATEFILE PATH

 145  setpid : SET PIDFILE PATH

 146  setmmonits : SET MMONIT mmonitlist

 147  mmonitlist : mmonit
 148             | mmonitlist mmonit

 149  mmonit : URLOBJECT nettimeout sslversion certmd5

 150  setmailservers : SET MAILSERVER mailserverlist nettimeout hostname

 151  setmailformat : SET MAILFORMAT '{' formatoptionlist '}'

 152  sethttpd : SET HTTPD PORT NUMBER httpdlist

 153  mailserverlist : mailserver
 154                 | mailserverlist mailserver

 155  mailserver : STRING username password sslversion certmd5
 156             | STRING PORT NUMBER username password sslversion certmd5

 157  httpdlist :
 158            | httpdlist httpdoption

 159  httpdoption : ssl
 160              | signature
 161              | bindaddress
 162              | allow

 163  ssl : ssldisable
 164      | sslenable pemfile clientpemfile allowselfcert

 165  sslenable : HTTPDSSL
 166            | HTTPDSSL ENABLE
 167            | ENABLE HTTPDSSL

 168  ssldisable : HTTPDSSL DISABLE
 169             | DISABLE HTTPDSSL
 170             | ssldisable PEMFILE PATH
 171             | ssldisable CLIENTPEMFILE PATH
 172             | ssldisable ALLOWSELFCERTIFICATION

 173  signature : sigenable
 174            | sigdisable

 175  sigenable : SIGNATURE ENABLE
 176            | ENABLE SIGNATURE

 177  sigdisable : SIGNATURE DISABLE
 178             | DISABLE SIGNATURE

 179  bindaddress : ADDRESS STRING

 180  pemfile : PEMFILE PATH

 181  clientpemfile :
 182                | CLIENTPEMFILE PATH

 183  allowselfcert :
 184                | ALLOWSELFCERTIFICATION

 185  allow : ALLOW STRING ':' STRING readonly
 186        | ALLOW '@' STRING readonly
 187        | ALLOW PATH
 188        | ALLOW CLEARTEXT PATH
 189        | ALLOW MD5HASH PATH
 190        | ALLOW CRYPT PATH

 191  $$1 :

 192  allow : ALLOW PATH $$1 allowuserlist

 193  $$2 :

 194  allow : ALLOW CLEARTEXT PATH $$2 allowuserlist

 195  $$3 :

 196  allow : ALLOW MD5HASH PATH $$3 allowuserlist

 197  $$4 :

 198  allow : ALLOW CRYPT PATH $$4 allowuserlist
 199        | ALLOW STRING

 200  allowuserlist : allowuser
 201                | allowuserlist allowuser

 202  allowuser : STRING

 203  readonly :
 204           | READONLY

 205  checkproc : CHECKPROC SERVICENAME PIDFILE PATH
 206            | CHECKPROC SERVICENAME PATHTOK PATH

 207  checkfile : CHECKFILE SERVICENAME PATHTOK PATH

 208  checkfilesys : CHECKFILESYS SERVICENAME PATHTOK PATH

 209  checkdir : CHECKDIR SERVICENAME PATHTOK PATH

 210  checkhost : CHECKHOST SERVICENAME ADDRESS STRING

 211  checksystem : CHECKSYSTEM SERVICENAME

 212  checkfifo : CHECKFIFO SERVICENAME PATHTOK PATH

 213  checkstatus : CHECKSTATUS SERVICENAME PATHTOK PATH

 214  start : START argumentlist exectimeout
 215        | START argumentlist useroptionlist exectimeout

 216  stop : STOP argumentlist exectimeout
 217       | STOP argumentlist useroptionlist exectimeout

 218  argumentlist : argument
 219               | argumentlist argument

 220  useroptionlist : useroption
 221                 | useroptionlist useroption

 222  argument : STRING
 223           | PATH

 224  useroption : UID STRING
 225             | GID STRING
 226             | UID NUMBER
 227             | GID NUMBER

 228  username :
 229           | USERNAME MAILADDR
 230           | USERNAME STRING

 231  password :
 232           | PASSWORD STRING

 233  hostname :
 234           | HOSTNAME STRING

 235  connection : IF FAILED host port type protocol nettimeout rate1 THEN action1 recovery
 236             | IF FAILED URL URLOBJECT urloption nettimeout rate1 THEN action1 recovery

 237  connectionunix : IF FAILED unixsocket type protocol nettimeout rate1 THEN action1 recovery

 238  icmp : IF FAILED ICMP icmptype icmpcount nettimeout rate1 THEN action1 recovery

 239  host :
 240       | HOST STRING

 241  port : PORT NUMBER

 242  unixsocket : UNIXSOCKET PATH

 243  type :
 244       | TYPE TCP
 245       | TYPE TCPSSL sslversion certmd5
 246       | TYPE UDP

 247  certmd5 :
 248          | CERTMD5 STRING

 249  sslversion :
 250             | SSLV2
 251             | SSLV3
 252             | TLSV1
 253             | SSLAUTO

 254  protocol :
 255           | PROTOCOL APACHESTATUS apache_stat_list
 256           | PROTOCOL DEFAULT
 257           | PROTOCOL DNS
 258           | PROTOCOL DWP
 259           | PROTOCOL FTP
 260           | PROTOCOL HTTP request
 261           | PROTOCOL IMAP
 262           | PROTOCOL CLAMAV
 263           | PROTOCOL LDAP2
 264           | PROTOCOL LDAP3
 265           | PROTOCOL MYSQL
 266           | PROTOCOL SIP target maxforward
 267           | PROTOCOL NNTP
 268           | PROTOCOL NTP3
 269           | PROTOCOL POSTFIXPOLICY
 270           | PROTOCOL POP
 271           | PROTOCOL SMTP
 272           | PROTOCOL SSH
 273           | PROTOCOL RDATE
 274           | PROTOCOL RSYNC
 275           | PROTOCOL TNS
 276           | PROTOCOL PGSQL
 277           | PROTOCOL LMTP
 278           | sendexpectlist

 279  sendexpectlist : sendexpect
 280                 | sendexpectlist sendexpect

 281  sendexpect : SEND STRING
 282             | EXPECT STRING

 283  target :
 284         | TARGET MAILADDR
 285         | TARGET STRING

 286  maxforward :
 287             | MAXFORWARD NUMBER

 288  request :
 289          | REQUEST PATH
 290          | REQUEST PATH CHECKSUM STRING

 291  apache_stat_list : apache_stat
 292                   | apache_stat_list OR apache_stat

 293  apache_stat : LOGLIMIT operator NUMBER PERCENT
 294              | CLOSELIMIT operator NUMBER PERCENT
 295              | DNSLIMIT operator NUMBER PERCENT
 296              | KEEPALIVELIMIT operator NUMBER PERCENT
 297              | REPLYLIMIT operator NUMBER PERCENT
 298              | REQUESTLIMIT operator NUMBER PERCENT
 299              | STARTLIMIT operator NUMBER PERCENT
 300              | WAITLIMIT operator NUMBER PERCENT
 301              | GRACEFULLIMIT operator NUMBER PERCENT
 302              | CLEANUPLIMIT operator NUMBER PERCENT

 303  pid : IF CHANGED PID rate1 THEN action1

 304  ppid : IF CHANGED PPID rate1 THEN action1

 305  icmpcount :
 306            | COUNT NUMBER

 307  exectimeout :
 308              | TIMEOUT NUMBER SECOND

 309  nettimeout :
 310             | TIMEOUT NUMBER SECOND

 311  timeout : IF NUMBER RESTART NUMBER CYCLE THEN TIMEOUT

 312  urloption :
 313            | CONTENT urloperator STRING

 314  urloperator : EQUAL
 315              | NOTEQUAL

 316  alert : alertmail '{' eventoptionlist '}' formatlist reminder
 317        | alertmail formatlist reminder
 318        | alertmail NOT '{' eventoptionlist '}' formatlist reminder
 319        | noalertmail

 320  alertmail : ALERT MAILADDR

 321  noalertmail : NOALERT MAILADDR

 322  eventoptionlist : eventoption
 323                  | eventoptionlist eventoption

 324  eventoption : ACTION
 325              | CHECKSUM
 326              | CONNECTION
 327              | CONTENT
 328              | DATA
 329              | EXEC
 330              | FSFLAG
 331              | GID
 332              | ICMP
 333              | INSTANCE
 334              | INVALID
 335              | NONEXIST
 336              | PERMISSION
 337              | PID
 338              | PPID
 339              | RESOURCE
 340              | SIZE
 341              | TIMEOUT
 342              | TIMESTAMP
 343              | UID

 344  formatlist :
 345             | MAILFORMAT '{' formatoptionlist '}'

 346  formatoptionlist : formatoption
 347                   | formatoptionlist formatoption

 348  formatoption : MAILFROM
 349               | MAILSUBJECT
 350               | MAILBODY

 351  every : EVERY NUMBER CYCLE

 352  mode : MODE ACTIVE
 353       | MODE PASSIVE
 354       | MODE MANUAL

 355  group : GROUP STRINGNAME

 356  depend : DEPENDS dependlist

 357  dependlist : dependant
 358             | dependlist dependant

 359  dependant : SERVICENAME

 360  resourceprocess : IF resourceprocesslist rate1 THEN action1 recovery

 361  resourceprocesslist : resourceprocessopt
 362                      | resourceprocesslist resourceprocessopt

 363  resourceprocessopt : resourcecpuproc
 364                     | resourcemem
 365                     | resourcechild
 366                     | resourceload

 367  resourcesystem : IF resourcesystemlist rate1 THEN action1 recovery

 368  resourcesystemlist : resourcesystemopt
 369                     | resourcesystemlist resourcesystemopt

 370  resourcesystemopt : resourceload
 371                    | resourcemem
 372                    | resourcecpu

 373  resourcecpuproc : CPU operator NUMBER PERCENT
 374                  | TOTALCPU operator NUMBER PERCENT

 375  resourcecpu : resourcecpuid operator NUMBER PERCENT

 376  resourcecpuid : CPUUSER
 377                | CPUSYSTEM
 378                | CPUWAIT

 379  resourcemem : MEMORY operator value unit
 380              | MEMORY operator NUMBER PERCENT
 381              | TOTALMEMORY operator value unit
 382              | TOTALMEMORY operator NUMBER PERCENT

 383  resourcechild : CHILDREN operator NUMBER

 384  resourceload : resourceloadavg operator value

 385  resourceloadavg : LOADAVG1
 386                  | LOADAVG5
 387                  | LOADAVG15

 388  value : REAL
 389        | NUMBER

 390  timestamp : IF TIMESTAMP operator NUMBER time rate1 THEN action1 recovery
 391            | IF CHANGED TIMESTAMP rate1 THEN action1

 392  operator :
 393           | GREATER
 394           | LESS
 395           | EQUAL
 396           | NOTEQUAL
 397           | CHANGED

 398  time :
 399       | SECOND
 400       | MINUTE
 401       | HOUR
 402       | DAY

 403  action : ALERT
 404         | EXEC argumentlist
 405         | EXEC argumentlist useroptionlist
 406         | RESTART
 407         | START
 408         | STOP
 409         | UNMONITOR

 410  action1 : action

 411  action2 : action

 412  rate1 :
 413        | NUMBER CYCLE
 414        | NUMBER NUMBER CYCLE

 415  rate2 :
 416        | NUMBER CYCLE
 417        | NUMBER NUMBER CYCLE

 418  recovery :
 419           | ELSE IF RECOVERED rate2 THEN action2
 420           | ELSE IF PASSED rate2 THEN action2
 421           | ELSE IF SUCCEEDED rate2 THEN action2

 422  checksum : IF FAILED hashtype CHECKSUM rate1 THEN action1 recovery
 423           | IF FAILED hashtype CHECKSUM EXPECT STRING rate1 THEN action1 recovery
 424           | IF CHANGED hashtype CHECKSUM rate1 THEN action1

 425  hashtype :
 426           | MD5HASH
 427           | SHA1HASH

 428  inode : IF INODE operator NUMBER rate1 THEN action1 recovery
 429        | IF INODE operator NUMBER PERCENT rate1 THEN action1 recovery

 430  space : IF SPACE operator value unit rate1 THEN action1 recovery
 431        | IF SPACE operator NUMBER PERCENT rate1 THEN action1 recovery

 432  fsflag : IF CHANGED FSFLAG rate1 THEN action1

 433  unit :
 434       | BYTE
 435       | KILOBYTE
 436       | MEGABYTE
 437       | GIGABYTE

 438  permission : IF FAILED PERMISSION NUMBER rate1 THEN action1 recovery

 439  match : IF matchflagnot MATCH PATH rate1 THEN action1
 440        | IF matchflagnot MATCH STRING rate1 THEN action1
 441        | IGNORE matchflagnot MATCH PATH
 442        | IGNORE matchflagnot MATCH STRING

 443  matchflagnot :
 444               | NOT

 445  size : IF SIZE operator NUMBER unit rate1 THEN action1 recovery
 446       | IF CHANGED SIZE rate1 THEN action1

 447  uid : IF FAILED UID STRING rate1 THEN action1 recovery
 448      | IF FAILED UID NUMBER rate1 THEN action1 recovery

 449  gid : IF FAILED GID STRING rate1 THEN action1 recovery
 450      | IF FAILED GID NUMBER rate1 THEN action1 recovery

 451  icmptype : TYPE ICMPECHO

 452  reminder :
 453           | REMINDER NUMBER
 454           | REMINDER NUMBER CYCLE

state 0
	$accept : . cfgfile $end  (0)
	cfgfile : .  (1)

	SET  shift 1
	CHECKPROC  shift 2
	CHECKFILESYS  shift 3
	CHECKFILE  shift 4
	CHECKDIR  shift 5
	CHECKHOST  shift 6
	CHECKSYSTEM  shift 7
	CHECKFIFO  shift 8
	CHECKSTATUS  shift 9
	$end  reduce 1

	cfgfile  goto 10
	statement_list  goto 11
	statement  goto 12
	setalert  goto 13
	setdaemon  goto 14
	setlog  goto 15
	seteventqueue  goto 16
	setmmonits  goto 17
	setmailservers  goto 18
	setmailformat  goto 19
	sethttpd  goto 20
	setpid  goto 21
	setidfile  goto 22
	setstatefile  goto 23
	setexpectbuffer  goto 24
	setinit  goto 25
	checkproc  goto 26
	checkfile  goto 27
	checkfilesys  goto 28
	checkdir  goto 29
	checkhost  goto 30
	checksystem  goto 31
	checkfifo  goto 32
	checkstatus  goto 33


state 1
	setalert : SET . alertmail '{' eventoptionlist '}' formatlist reminder  (129)
	setalert : SET . alertmail formatlist reminder  (130)
	setalert : SET . alertmail NOT '{' eventoptionlist '}' formatlist reminder  (131)
	setdaemon : SET . DAEMON NUMBER startdelay  (132)
	setexpectbuffer : SET . EXPECTBUFFER NUMBER unit  (135)
	setinit : SET . INIT  (136)
	setlog : SET . LOGFILE PATH  (137)
	setlog : SET . LOGFILE SYSLOG  (138)
	setlog : SET . LOGFILE SYSLOG FACILITY STRING  (139)
	seteventqueue : SET . EVENTQUEUE BASEDIR PATH  (140)
	seteventqueue : SET . EVENTQUEUE BASEDIR PATH SLOT NUMBER  (141)
	seteventqueue : SET . EVENTQUEUE SLOT NUMBER  (142)
	setidfile : SET . IDFILE PATH  (143)
	setstatefile : SET . STATEFILE PATH  (144)
	setpid : SET . PIDFILE PATH  (145)
	setmmonits : SET . MMONIT mmonitlist  (146)
	setmailservers : SET . MAILSERVER mailserverlist nettimeout hostname  (150)
	setmailformat : SET . MAILFORMAT '{' formatoptionlist '}'  (151)
	sethttpd : SET . HTTPD PORT NUMBER httpdlist  (152)

	LOGFILE  shift 34
	DAEMON  shift 35
	MAILSERVER  shift 36
	HTTPD  shift 37
	INIT  shift 38
	IDFILE  shift 39
	STATEFILE  shift 40
	EXPECTBUFFER  shift 41
	PIDFILE  shift 42
	ALERT  shift 43
	MAILFORMAT  shift 44
	EVENTQUEUE  shift 45
	MMONIT  shift 46
	.  error

	alertmail  goto 47


state 2
	checkproc : CHECKPROC . SERVICENAME PIDFILE PATH  (205)
	checkproc : CHECKPROC . SERVICENAME PATHTOK PATH  (206)

	SERVICENAME  shift 48
	.  error


state 3
	checkfilesys : CHECKFILESYS . SERVICENAME PATHTOK PATH  (208)

	SERVICENAME  shift 49
	.  error


state 4
	checkfile : CHECKFILE . SERVICENAME PATHTOK PATH  (207)

	SERVICENAME  shift 50
	.  error


state 5
	checkdir : CHECKDIR . SERVICENAME PATHTOK PATH  (209)

	SERVICENAME  shift 51
	.  error


state 6
	checkhost : CHECKHOST . SERVICENAME ADDRESS STRING  (210)

	SERVICENAME  shift 52
	.  error


state 7
	checksystem : CHECKSYSTEM . SERVICENAME  (211)

	SERVICENAME  shift 53
	.  error


state 8
	checkfifo : CHECKFIFO . SERVICENAME PATHTOK PATH  (212)

	SERVICENAME  shift 54
	.  error


state 9
	checkstatus : CHECKSTATUS . SERVICENAME PATHTOK PATH  (213)

	SERVICENAME  shift 55
	.  error


state 10
	$accept : cfgfile . $end  (0)

	$end  accept


state 11
	cfgfile : statement_list .  (2)
	statement_list : statement_list . statement  (4)

	SET  shift 1
	CHECKPROC  shift 2
	CHECKFILESYS  shift 3
	CHECKFILE  shift 4
	CHECKDIR  shift 5
	CHECKHOST  shift 6
	CHECKSYSTEM  shift 7
	CHECKFIFO  shift 8
	CHECKSTATUS  shift 9
	$end  reduce 2

	statement  goto 56
	setalert  goto 13
	setdaemon  goto 14
	setlog  goto 15
	seteventqueue  goto 16
	setmmonits  goto 17
	setmailservers  goto 18
	setmailformat  goto 19
	sethttpd  goto 20
	setpid  goto 21
	setidfile  goto 22
	setstatefile  goto 23
	setexpectbuffer  goto 24
	setinit  goto 25
	checkproc  goto 26
	checkfile  goto 27
	checkfilesys  goto 28
	checkdir  goto 29
	checkhost  goto 30
	checksystem  goto 31
	checkfifo  goto 32
	checkstatus  goto 33


state 12
	statement_list : statement .  (3)

	.  reduce 3


state 13
	statement : setalert .  (5)

	.  reduce 5


state 14
	statement : setdaemon .  (6)

	.  reduce 6


state 15
	statement : setlog .  (7)

	.  reduce 7


state 16
	statement : seteventqueue .  (8)

	.  reduce 8


state 17
	statement : setmmonits .  (9)

	.  reduce 9


state 18
	statement : setmailservers .  (10)

	.  reduce 10


state 19
	statement : setmailformat .  (11)

	.  reduce 11


state 20
	statement : sethttpd .  (12)

	.  reduce 12


state 21
	statement : setpid .  (13)

	.  reduce 13


state 22
	statement : setidfile .  (14)

	.  reduce 14


state 23
	statement : setstatefile .  (15)

	.  reduce 15


state 24
	statement : setexpectbuffer .  (16)

	.  reduce 16


state 25
	statement : setinit .  (17)

	.  reduce 17


state 26
	statement : checkproc . optproclist  (18)
	optproclist : .  (26)

	.  reduce 26

	optproclist  goto 57


state 27
	statement : checkfile . optfilelist  (19)
	optfilelist : .  (41)

	.  reduce 41

	optfilelist  goto 58


state 28
	statement : checkfilesys . optfilesyslist  (20)
	optfilesyslist : .  (58)

	.  reduce 58

	optfilesyslist  goto 59


state 29
	statement : checkdir . optdirlist  (21)
	optdirlist : .  (74)

	.  reduce 74

	optdirlist  goto 60


state 30
	statement : checkhost . opthostlist  (22)

	IF  shift 61
	START  shift 62
	STOP  shift 63
	ALERT  shift 43
	NOALERT  shift 64
	EVERY  shift 65
	MODE  shift 66
	GROUP  shift 67
	DEPENDS  shift 68
	.  error

	opthostlist  goto 69
	start  goto 70
	stop  goto 71
	connection  goto 72
	timeout  goto 73
	alert  goto 74
	every  goto 75
	mode  goto 76
	group  goto 77
	depend  goto 78
	opthost  goto 79
	icmp  goto 80
	alertmail  goto 81
	noalertmail  goto 82


state 31
	statement : checksystem . optsystemlist  (23)
	optsystemlist : .  (100)

	.  reduce 100

	optsystemlist  goto 83


state 32
	statement : checkfifo . optfifolist  (24)
	optfifolist : .  (108)

	.  reduce 108

	optfifolist  goto 84


state 33
	statement : checkstatus . optstatuslist  (25)
	optstatuslist : .  (122)

	.  reduce 122

	optstatuslist  goto 85


state 34
	setlog : SET LOGFILE . PATH  (137)
	setlog : SET LOGFILE . SYSLOG  (138)
	setlog : SET LOGFILE . SYSLOG FACILITY STRING  (139)

	SYSLOG  shift 86
	PATH  shift 87
	.  error


state 35
	setdaemon : SET DAEMON . NUMBER startdelay  (132)

	NUMBER  shift 88
	.  error


state 36
	setmailservers : SET MAILSERVER . mailserverlist nettimeout hostname  (150)

	STRING  shift 89
	.  error

	mailserverlist  goto 90
	mailserver  goto 91


state 37
	sethttpd : SET HTTPD . PORT NUMBER httpdlist  (152)

	PORT  shift 92
	.  error


state 38
	setinit : SET INIT .  (136)

	.  reduce 136


state 39
	setidfile : SET IDFILE . PATH  (143)

	PATH  shift 93
	.  error


state 40
	setstatefile : SET STATEFILE . PATH  (144)

	PATH  shift 94
	.  error


state 41
	setexpectbuffer : SET EXPECTBUFFER . NUMBER unit  (135)

	NUMBER  shift 95
	.  error


state 42
	setpid : SET PIDFILE . PATH  (145)

	PATH  shift 96
	.  error


state 43
	alertmail : ALERT . MAILADDR  (320)

	MAILADDR  shift 97
	.  error


state 44
	setmailformat : SET MAILFORMAT . '{' formatoptionlist '}'  (151)

	'{'  shift 98
	.  error


state 45
	seteventqueue : SET EVENTQUEUE . BASEDIR PATH  (140)
	seteventqueue : SET EVENTQUEUE . BASEDIR PATH SLOT NUMBER  (141)
	seteventqueue : SET EVENTQUEUE . SLOT NUMBER  (142)

	BASEDIR  shift 99
	SLOT  shift 100
	.  error


state 46
	setmmonits : SET MMONIT . mmonitlist  (146)

	URLOBJECT  shift 101
	.  error

	mmonitlist  goto 102
	mmonit  goto 103


state 47
	setalert : SET alertmail . '{' eventoptionlist '}' formatlist reminder  (129)
	setalert : SET alertmail . formatlist reminder  (130)
	setalert : SET alertmail . NOT '{' eventoptionlist '}' formatlist reminder  (131)
	formatlist : .  (344)

	MAILFORMAT  shift 104
	NOT  shift 105
	'{'  shift 106
	$end  reduce 344
	SET  reduce 344
	REMINDER  reduce 344
	CHECKPROC  reduce 344
	CHECKFILESYS  reduce 344
	CHECKFILE  reduce 344
	CHECKDIR  reduce 344
	CHECKHOST  reduce 344
	CHECKSYSTEM  reduce 344
	CHECKFIFO  reduce 344
	CHECKSTATUS  reduce 344

	formatlist  goto 107


state 48
	checkproc : CHECKPROC SERVICENAME . PIDFILE PATH  (205)
	checkproc : CHECKPROC SERVICENAME . PATHTOK PATH  (206)

	PIDFILE  shift 108
	PATHTOK  shift 109
	.  error


state 49
	checkfilesys : CHECKFILESYS SERVICENAME . PATHTOK PATH  (208)

	PATHTOK  shift 110
	.  error


state 50
	checkfile : CHECKFILE SERVICENAME . PATHTOK PATH  (207)

	PATHTOK  shift 111
	.  error


state 51
	checkdir : CHECKDIR SERVICENAME . PATHTOK PATH  (209)

	PATHTOK  shift 112
	.  error


state 52
	checkhost : CHECKHOST SERVICENAME . ADDRESS STRING  (210)

	ADDRESS  shift 113
	.  error


state 53
	checksystem : CHECKSYSTEM SERVICENAME .  (211)

	.  reduce 211


state 54
	checkfifo : CHECKFIFO SERVICENAME . PATHTOK PATH  (212)

	PATHTOK  shift 114
	.  error


state 55
	checkstatus : CHECKSTATUS SERVICENAME . PATHTOK PATH  (213)

	PATHTOK  shift 115
	.  error


state 56
	statement_list : statement_list statement .  (4)

	.  reduce 4


state 57
	statement : checkproc optproclist .  (18)
	optproclist : optproclist . optproc  (27)

	IF  shift 116
	START  shift 62
	STOP  shift 63
	ALERT  shift 43
	NOALERT  shift 64
	EVERY  shift 65
	MODE  shift 66
	GROUP  shift 67
	DEPENDS  shift 68
	$end  reduce 18
	SET  reduce 18
	CHECKPROC  reduce 18
	CHECKFILESYS  reduce 18
	CHECKFILE  reduce 18
	CHECKDIR  reduce 18
	CHECKHOST  reduce 18
	CHECKSYSTEM  reduce 18
	CHECKFIFO  reduce 18
	CHECKSTATUS  reduce 18

	optproc  goto 117
	start  goto 118
	stop  goto 119
	pid  goto 120
	ppid  goto 121
	connection  goto 122
	connectionunix  goto 123
	timeout  goto 124
	alert  goto 125
	every  goto 126
	mode  goto 127
	group  goto 128
	depend  goto 129
	resourceprocess  goto 130
	alertmail  goto 81
	noalertmail  goto 82


state 58
	statement : checkfile optfilelist .  (19)
	optfilelist : optfilelist . optfile  (42)

	IF  shift 131
	START  shift 62
	STOP  shift 63
	ALERT  shift 43
	NOALERT  shift 64
	EVERY  shift 65
	MODE  shift 66
	GROUP  shift 67
	DEPENDS  shift 68
	IGNORE  shift 132
	$end  reduce 19
	SET  reduce 19
	CHECKPROC  reduce 19
	CHECKFILESYS  reduce 19
	CHECKFILE  reduce 19
	CHECKDIR  reduce 19
	CHECKHOST  reduce 19
	CHECKSYSTEM  reduce 19
	CHECKFIFO  reduce 19
	CHECKSTATUS  reduce 19

	start  goto 133
	stop  goto 134
	timeout  goto 135
	alert  goto 136
	every  goto 137
	mode  goto 138
	group  goto 139
	depend  goto 140
	optfile  goto 141
	timestamp  goto 142
	permission  goto 143
	uid  goto 144
	gid  goto 145
	checksum  goto 146
	size  goto 147
	match  goto 148
	alertmail  goto 81
	noalertmail  goto 82


state 59
	statement : checkfilesys optfilesyslist .  (20)
	optfilesyslist : optfilesyslist . optfilesys  (59)

	IF  shift 149
	START  shift 62
	STOP  shift 63
	ALERT  shift 43
	NOALERT  shift 64
	EVERY  shift 65
	MODE  shift 66
	GROUP  shift 67
	DEPENDS  shift 68
	$end  reduce 20
	SET  reduce 20
	CHECKPROC  reduce 20
	CHECKFILESYS  reduce 20
	CHECKFILE  reduce 20
	CHECKDIR  reduce 20
	CHECKHOST  reduce 20
	CHECKSYSTEM  reduce 20
	CHECKFIFO  reduce 20
	CHECKSTATUS  reduce 20

	start  goto 150
	stop  goto 151
	timeout  goto 152
	alert  goto 153
	every  goto 154
	mode  goto 155
	group  goto 156
	depend  goto 157
	permission  goto 158
	uid  goto 159
	gid  goto 160
	optfilesys  goto 161
	inode  goto 162
	space  goto 163
	fsflag  goto 164
	alertmail  goto 81
	noalertmail  goto 82


state 60
	statement : checkdir optdirlist .  (21)
	optdirlist : optdirlist . optdir  (75)

	IF  shift 165
	START  shift 62
	STOP  shift 63
	ALERT  shift 43
	NOALERT  shift 64
	EVERY  shift 65
	MODE  shift 66
	GROUP  shift 67
	DEPENDS  shift 68
	$end  reduce 21
	SET  reduce 21
	CHECKPROC  reduce 21
	CHECKFILESYS  reduce 21
	CHECKFILE  reduce 21
	CHECKDIR  reduce 21
	CHECKHOST  reduce 21
	CHECKSYSTEM  reduce 21
	CHECKFIFO  reduce 21
	CHECKSTATUS  reduce 21

	start  goto 166
	stop  goto 167
	timeout  goto 168
	alert  goto 169
	every  goto 170
	mode  goto 171
	group  goto 172
	depend  goto 173
	timestamp  goto 174
	permission  goto 175
	uid  goto 176
	gid  goto 177
	optdir  goto 178
	alertmail  goto 81
	noalertmail  goto 82


state 61
	connection : IF . FAILED host port type protocol nettimeout rate1 THEN action1 recovery  (235)
	connection : IF . FAILED URL URLOBJECT urloption nettimeout rate1 THEN action1 recovery  (236)
	icmp : IF . FAILED ICMP icmptype icmpcount nettimeout rate1 THEN action1 recovery  (238)
	timeout : IF . NUMBER RESTART NUMBER CYCLE THEN TIMEOUT  (311)

	FAILED  shift 179
	NUMBER  shift 180
	.  error


state 62
	start : START . argumentlist exectimeout  (214)
	start : START . argumentlist useroptionlist exectimeout  (215)
